[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/level/level.gd" type="Script" id=1]
[ext_resource path="res://scenes/level/trashBin.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/PressStart2P.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Desafio/themeMusic2.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/Central de Reciclagem/pickupCoin.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Central de Reciclagem/powerUp.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 192, 10 )

[node name="Coleta_de_lixo" type="Node2D"]
position = Vector2( -5, 6 )
script = ExtResource( 1 )

[node name="HUD" type="Node" parent="."]

[node name="LblPontos" type="Label" parent="HUD"]
margin_left = 5.0
margin_top = 3.0
margin_right = 133.0
margin_bottom = 19.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 1 )
text = "Pontos: "

[node name="IntPontos" type="Label" parent="HUD"]
margin_left = 81.0
margin_top = 2.0
margin_right = 121.0
margin_bottom = 18.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 1 )

[node name="TipoPontos" type="Label" parent="HUD"]
margin_left = 289.0
margin_top = 3.0
margin_right = 417.0
margin_bottom = 19.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 2 )
align = 2

[node name="maxPontos" type="Label" parent="HUD"]
margin_left = 3.0
margin_top = 18.0
margin_right = 131.0
margin_bottom = 34.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "(MAX:10)"

[node name="Trashbin" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, 169 )
scale = Vector2( 0.7, 0.7 )

[node name="TrashSpawn" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="TrashDelete" type="Area2D" parent="."]
position = Vector2( 25, 151 )

[node name="TrashDeleteCollision" type="CollisionShape2D" parent="TrashDelete"]
position = Vector2( 167, 100 )
shape = SubResource( 4 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Tween" type="Tween" parent="."]
playback_speed = 2.0
playback/speed = 2.0

[node name="themeMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioAcertarLixo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioErrarLixo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="lixo_coletado" from="Trashbin" to="." method="_on_Trashbin_lixo_coletado"]
[connection signal="lixo_errado" from="Trashbin" to="." method="_on_Trashbin_lixo_errado"]
[connection signal="timeout" from="TrashSpawn" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="TrashDelete" to="." method="_on_Area2D_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
